tests/error/testcaseErroVariavelNaoDeclarada.g
/* variável z não declarada, o analisador deve verificar isso */
programa {
    leia z;
    escreva "Teste";
}